fixed mobile content spacing

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -226,7 +226,7 @@ hr {
   }
 
   h4 {
-    font-size: 1em;
+    font-size: 0.95em;
     padding-top: 5px;
   }
 
